--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "history.h": "c",
     "termios.h": "c",
     "signal.h": "c",
-    "socket.h": "c"
+    "socket.h": "c",
+    "stdint.h": "c"
   }
 }
